# devops-engineer-from-scratch-project-313

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  config.py  database.py  docker-entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: database.py  dependencies.py  main.py  models.py  schemas.py
backend/repositories/: links.py
backend/routers/: links.py  public.py
nginx/: default.conf.template
routers/: links.py
tests/: conftest.py  test_links.py  test_ping.py
