[project]
name = "hexlet-code"
version = "0.1.0"
description = "Веб-приложение на FastAPI: health-check и API (учебный проект Hexlet)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kamil Kayumov", email = "kamilkayumov@gmail.com" },
]
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
